fix(styles): more style fixes to better right align the table row

--- a/src/App.css
+++ b/src/App.css
@@ -151,7 +151,7 @@ body .app {
     margin-bottom: 4rem;
     margin-top: 84px;
     height: 218px;
-    margin-left: 105px;
+    margin-left: 103px;
 }
 
 @media only screen and (max-width: 1300px) {
