--- a/src/FlightDeparturesTableRow.module.css
+++ b/src/FlightDeparturesTableRow.module.css
@@ -15,7 +15,7 @@
 }
 
 .row td:first-child {
-    padding-left: 100px
+    padding-left: 103px
 }
 
 
